[package]
name = "epaxos_rs"
version = "0.1.0"
authors = ["Pi Songkuntham <pisong@princeton.edu>"]
license = "MIT"
description = "A Rust implementation of EPaxos"
edition = "2018"

[dependencies]
grpc            = "0.6.1"
protobuf        = "~2"
protoc-rust = "2.8.1"
futures         = "0.3.1"
futures-cpupool = "~0.1"

[build-dependencies]
protoc-rust-grpc = "0.6.1"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"